--- a/admin/package.json
+++ b/admin/package.json
@@ -35,11 +35,13 @@
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "next-cloudinary": "^4.15.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
